@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-13
+2015-09-08 David Schneider
+- Dataset::files() refactor and use stream filter to match files
+
 Tag: V00-01-12
 2015-04-03 Christopher O'Grady
 - Remove debug print statements.
